--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,24 @@
 
     <name>java-go</name>
 
+    <properties>
+        <dubbo.starter.version>2.0.0</dubbo.starter.version>
+    </properties>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.0.0.RELEASE</version>
+        <relativePath/>
+    </parent>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba.spring.boot</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+            <version>${dubbo.starter.version}</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
